plugins {
    id 'java'
    id 'io.quarkus'
}

repositories {
    mavenCentral()
    mavenLocal()
}


dependencies {

    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")

    // REST
    implementation("io.quarkus:quarkus-rest")
    implementation("io.quarkus:quarkus-rest-jsonb")

    // CDI
    implementation("io.quarkus:quarkus-arc")

    // OpenAPI + Swagger
    implementation("io.quarkus:quarkus-smallrye-openapi")
    implementation("io.quarkus:quarkus-swagger-ui")

    // Hibernate + Panache
    implementation("io.quarkus:quarkus-hibernate-orm")
    implementation("io.quarkus:quarkus-hibernate-orm-panache")


    // SQLite
    implementation("org.xerial:sqlite-jdbc:3.46.0.0")
    implementation "org.hibernate.orm:hibernate-community-dialects:7.1.6.Final"


    // XML → JSON
    implementation("org.json:json:20210307")

    // Jasper
    implementation("net.sf.jasperreports:jasperreports:6.20.6")
    implementation("com.lowagie:itext:2.1.7")
    implementation("com.github.librepdf:openpdf:1.3.30")

    testImplementation("io.quarkus:quarkus-junit5")
    testImplementation("io.rest-assured:rest-assured")
}



group = 'py.com'
version = '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
}
compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}
